@@ -2,6 +2,8 @@ package seedu.address.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.logic.commands.exceptions.CommandException;
@@ -9,13 +11,14 @@ import seedu.address.model.Model;
 import seedu.address.model.exceptions.ModifyFrozenStateException;
 
 /**
- * Unfreezes the address book.
+ * Unfreezes the E-Lister.
  */
 public class UnfreezeCommand extends Command {
-
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"unfreeze", "unf"});
-    public static final String MESSAGE_SUCCESS = "Address book has been unfrozen!";
-    public static final String MESSAGE_FAILURE = "Address book is not frozen!";
+    //CHECKSTYLE.OFF: VisibilityModifier
+    public static List<String> commandWords = new ArrayList<String>(Arrays.asList("unfreeze", "unf"));
+    //CHECKSTYLE.ON: VisibilityModifier
+    public static final String MESSAGE_SUCCESS = "E-Lister has been unfrozen!";
+    public static final String MESSAGE_FAILURE = "E-Lister is not frozen!";
 
     @Override
     public CommandResult execute(Model model) throws CommandException {
